Add mirror client factory